@@ -1,6 +1,7 @@
 package com.foodkeeper.foodkeeperserver.food.domain;
 
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -9,20 +10,27 @@ public class FoodCategories {
 
     private final Map<Long, List<FoodCategory>> categories;
 
-    public FoodCategories(List<SelectedFoodCategory> selectedFoodCategories, List<FoodCategory> foodCategories) {
-        Map<Long, FoodCategory> categoryMap = foodCategories.stream()
-                .collect(Collectors.toMap(FoodCategory::id, foodCategory -> foodCategory));
+    private FoodCategories(Map<Long, List<FoodCategory>> categories) {
+        this.categories = Collections.unmodifiableMap(new HashMap<>(categories));
+    }
 
-        this.categories = selectedFoodCategories.stream()
+    public static FoodCategories from(List<SelectedFoodCategory> selectedFoodCategories, List<FoodCategory> foodCategories) {
+        Map<Long, FoodCategory> categoryMap = foodCategories.stream()
+                .collect(Collectors.toMap(FoodCategory::id, fc -> fc));
+
+        Map<Long, List<FoodCategory>> grouped = selectedFoodCategories.stream()
                 .collect(Collectors.groupingBy(
                         SelectedFoodCategory::foodId,
                         Collectors.mapping(
-                                selectedFoodCategory -> categoryMap.get(selectedFoodCategory.foodCategoryId()),
-                                Collectors.toList()
+                                sfc -> categoryMap.get(sfc.foodCategoryId()),
+                                Collectors.toUnmodifiableList()
                         )
                 ));
+
+        return new FoodCategories(grouped);
     }
+
     public List<FoodCategory> getCategories(Long foodId) {
-        return categories.getOrDefault(foodId, Collections.emptyList());
+        return categories.getOrDefault(foodId, List.of());
     }
 }
